<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <ImageView
        android:id="@+id/imgAvatar1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionPikachu"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pikachu" />

    <ImageView
        android:id="@+id/imgAvatar2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionCubone"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cubone" />

    <ImageView
        android:id="@+id/imgAvatar3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionGyarados"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gyarados" />

    <ImageView
        android:id="@+id/imgAvatar4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionBulbasur"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar1"
        app:srcCompat="@drawable/bulbasur" />

    <ImageView
        android:id="@+id/imgAvatar5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionFeeBas"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar4"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar2"
        app:srcCompat="@drawable/feebas" />

    <ImageView
        android:id="@+id/imgAvatar6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionJipplypuff"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar3"
        app:srcCompat="@drawable/jigglypuff" />

    <ImageView
        android:id="@+id/imgAvatar7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionChikorita"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar4"
        app:srcCompat="@drawable/chikorita" />

    <ImageView
        android:id="@+id/imgAvatar8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descriptionGiratina"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar7"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar5"
        app:srcCompat="@drawable/giratina" />

    <ImageView
        android:id="@+id/imgAvatar9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descripcionPachirisu"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar8"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar6"
        app:srcCompat="@drawable/pachirisu" />

    <CheckBox
        android:id="@+id/chkAvatar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkAvatar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chkAvatar1"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkAvatar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar5"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <CheckBox
        android:id="@+id/chkAvatar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar6"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <CheckBox
        android:id="@+id/chkAvatar7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar7" />

    <CheckBox
        android:id="@+id/chkAvatar8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar8" />

    <CheckBox
        android:id="@+id/chkAvatar9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar9" />

    <CheckBox
        android:id="@+id/chkAvatar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkAvatar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/lblAvatar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:textAlignment="center"
        android:text="@string/namePikachu"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar4"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblAvatar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameCubone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar5"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/lblAvatar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameGyarados"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/lblAvatar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameBulbasur"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblAvatar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameFeebas"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/lblAvatar6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameJipplypuff"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imgAvatar9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/lblAvatar7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameChikorita"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblAvatar8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/nameGiratine"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/lblAvatar9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/avatar_label_background"
        android:text="@string/namePachirisu"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />
</androidx.constraintlayout.widget.ConstraintLayout>